--- a/Logging MiddleWare/package.json
+++ b/Logging MiddleWare/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "backend",
+  "name": "logging-middleware",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon logger.js"
   },
   "keywords": [],
   "author": "",
